<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <Button
        android:id="@+id/btnNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/demo_news" />

    <Button
        android:id="@+id/btnComponents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/demo_components" />

    <Button
        android:id="@+id/btnStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_storage" />

</LinearLayout>
