<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <Button android:id="@+id/btnDataStore"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginBottom="12dp" android:text="@string/btn_ds_save" />

    <Button android:id="@+id/btnSecure"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginBottom="12dp" android:text="@string/btn_secure_save" />

    <Button android:id="@+id/btnRoom"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginBottom="12dp" android:text="@string/btn_room_add" />

    <TextView android:id="@+id/output"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textSize="14sp" />

</LinearLayout>
